[package]
name = "actix_hello_world"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "actix_hello_world"
path = "src/main.rs"

[dev-dependencies]
reqwest = "0.11.23"

[dependencies]
actix-web = "4.4.1"
chrono = "0.4.31"
config = "0.13.4"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]
