[package]
name = "actix_hello_world"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "actix_hello_world"
path = "src/main.rs"

[dev-dependencies]
reqwest = "0.11.23"

[dependencies]
actix-web = "4.4.1"
chrono = "0.4.31"
config = { version = "0.13.4", default-features = false, features = ["yaml"] }
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"]}
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"]}
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]
